--- a/phatgoose/configs/config.yaml
+++ b/phatgoose/configs/config.yaml
@@ -32,9 +32,7 @@ data:
     max_sample_wer: 0.5
     shuffle: True
     batch_size: 64
-    use_mini_batch_per_model: True
-    per_model_mini_batch_size: 32  # 8
-    num_models_per_batch: 1  # 8
+    pos_neg_ratio: 0.5
 
   validation:
     manifest_filepath: ${manifests_dir}/val.pkl
